--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "jaggu-lib",
   "version": "0.0.1",
+  "repository": "https://github.com/jaggu303619/jaggu-lib.git",
+  "license": "MIT",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -12,6 +14,8 @@
   },
   "private": false,
   "dependencies": {
+  },
+  "peerDependencies": {
     "@angular/animations": "^6.0.1",
     "@angular/common": "^6.0.0",
     "@angular/compiler": "^6.0.0",
